--- a/css/sections/header.scss
+++ b/css/sections/header.scss
@@ -34,6 +34,8 @@
                 max-width: 350px;
                 height: 30px;
                 margin-right: 10px;
+                padding: 10px;
+                color: $light-grey;
             }
             &-button {
                 
